# Methods-and-Tools-for-Software-Engineering

./: README.md
a1/a1/: a1ece650.py  intersectionpoint.py  user.yml
a2/a2/: ece650-a2.cpp  user.yml
a3/a3/: CMakeLists.txt  a1ece650.py  a2ece650.cpp  a3ece650.cpp  rgen.cpp  user.yml
a4/a4/: CMakeLists.txt  ece650-a4.cpp
project/: CMakeLists.txt  InputValidation.cpp  ece650-project.docx  prjece650.cpp  user.yml
